@@ -569,6 +569,7 @@ pages for purposes of page relevancy ranking.
 * Fix breakage on rerunning the site_stats update
 * Localized namespaces for csb
 * Fix for reading incorrectly re-gzipped HistoryBlob entries
+* Generalize project namespace for Latin localization, update namespaces
 
 
 === Caveats ===
